Fix twitter icon wrap at 320px

--- a/assets/baseof.sass
+++ b/assets/baseof.sass
@@ -98,7 +98,7 @@
     padding: 6px 6px
     width: 100%
     background-color: $scholaBlue
-    font-size: 14px
+    font-size: 13px
     color: #ddd
     text-align: center
     a:link, a:visited
@@ -117,11 +117,13 @@
     display: block
 @media (min-width: 350px)
     #layout-footer
+        font-size: 14px
+@media (min-width: 380px)
+    #layout-footer
         padding: 6px 12px
+        font-size: 14px
     #footer-spacer1
         width: 1em
-    #footer-twitter
-        margin-left: 0.5em
 @media (min-width: 420px)
     #footer-spacer3
         display: inline-block
